Fix the z-index of the pre-header

--- a/src/scss/components/c-pre-header.scss
+++ b/src/scss/components/c-pre-header.scss
@@ -1,6 +1,8 @@
 .c-pre-header {
   display: none;
   background: $black;
+  position: relative; // For the homepage vis
+  z-index: 2; // For the homepage vis
 
   @media screen and (min-width: $screen-l) {
     display: block;
